--- a/src/components/TableCard/index.css
+++ b/src/components/TableCard/index.css
@@ -1,6 +1,6 @@
 .card_wrapper {
-    width: 210px;
-    height: 140px;
+    width: 240px;
+    height: 160px;
     margin: 5px;
 
     border: 1px solid gray;
@@ -30,6 +30,8 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+
+    overflow: scroll;
 
 }
 
