allow user to select options

--- a/src/components/TableCard/index.css
+++ b/src/components/TableCard/index.css
@@ -1,20 +1,70 @@
 .card_wrapper {
-    width: 240px;
-    height: 160px;
+    width: 250px;
+    height: 260px;
+    max-width: 5040px;
+    min-width: 260px;
     margin: 5px;
 
     border: 1px solid gray;
     border-radius: 5px;
     
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
+    display: inline-block;
+
+    overflow: scroll;
     align-items: center;
 
     padding: 10px;
     font-size: 20px;
 }
-
+.card_wrapper:checked {
+    background: rgb(117, 51, 51);
+    border: 11px solid gray;
+}
+input[type="checkbox"]{
+    -webkit-appearance: initial;
+    appearance: initial;
+    width: 40px;
+    height: 40px;
+    border: none;
+    background: rgba(255, 255, 255, 0.57);
+    position: relative;
+    left:2%;
+    float:left;
+}
+input[type="checkbox"]:checked {
+    background: white;
+}
+.table_label {
+    /* Other styling... */
+    text-align: left;
+    clear: both;
+    float:left;
+    margin-right:15px;
+}
+input[type="checkbox"]:checked:after {
+    /* Heres your symbol replacement - this is a tick in Unicode. */
+    content: "\2713";
+    color: rgb(209, 96, 39);
+    /* The following positions my tick in the center, 
+     * but you could just overlay the entire box
+     * with a full after element with a background if you want to */
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate(-50%,-50%);
+    -moz-transform: translate(-50%,-50%);
+    -ms-transform: translate(-50%,-50%);
+    transform: translate(-50%,-50%);
+    /*
+     * If you want to fully change the check appearance, use the following:
+     * content: " ";
+     * width: 100%;
+     * height: 100%;
+     * background: blue;
+     * top: 0;
+     * left: 0;
+     */
+}
 .card_wrapper:hover {
     cursor: pointer;
     border: 1px solid black;
