--- a/src/pages/Input/index.css
+++ b/src/pages/Input/index.css
@@ -1,12 +1,13 @@
 
 .container {
-	height: 100%;
+	  height: 100%;
     width: 100%;
     position: fixed;
-    z-index: 1;
+    z-index: 0;
     top: 0;
     overflow-x: hidden;
-    padding-top: 20px;
+    padding-top: 2px;
+    border:none
 }
 
 /* Split the screen in half */
@@ -22,7 +23,7 @@
   .diagram-component {
     width: 400px;
     height: 400px;
-    border: solid 1px black;
+    border: none;
     background-color: white;
   }
   
